--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 		    <artifactId>junit-jupiter-api</artifactId>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+	        <groupId>org.junit.jupiter</groupId>
+	        <artifactId>junit-jupiter-engine</artifactId>
+	        <version>5.4.2</version>
+	        <scope>test</scope>
+   		 </dependency>
 	</dependencies>
 
 	<build>
